# subgraph-matching-problem

./: Algorithms.cpp  Algorithms.hpp  CMakeLists.txt  Matrix.hpp  README  README.md  examples.cpp  graph_helpers.py  graphblas.hpp  input.txt  k_clique_algorithms.py  la_algorithms.h  main.cpp  main_program.py  makeDataForTest.py  output.txt  sparse_matrix.h
data/: r.txt
graphBlas/: blas_matrix.cpp  blas_matrix.hpp  graph_reader.hpp  la_algorithms_blas.hpp
sparseMatrix/: examples.cpp  graph_loader.hpp  la_algorithms.h  sparse_matrix.h
src/: Algorithms.cpp  Algorithms.hpp  LAGraphAlgorithms.cpp  LAGraphAlgorithms.hpp  Matrix.hpp  ParallelAlgorithms.cpp  ParallelAlgorithms.hpp
tests/: CMakeLists.txt  testGraphBlasMatrix.cc  test_algorithm_comparison.cpp  testgraph_gtest.cc
